Update release-packages.yml to include permissions
Add permissions for writing contents in release workflow

--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -3,6 +3,9 @@
 
 name: Release latest starter and migration packages
 
+permissions:
+  contents: write
+
 on:
   push:
     branches: [ master, main ]
